# AutoWhiteBalance

./: .gitignore  README.md
Cpp/: AutoWhiteBalance.cpp  AutoWhiteBalance.h  CMakeLists.txt  Exceptions.h  main.cpp
ffcc/: Train.m  init_minfunc.m
ffcc/internal/: ChannelizeImage.m  DataPaths.m  PrivateConstants.m
ffcc/projects/GehlerShi/: GehlerShiConstants.m
matlab_training/: data_loader.m  evaluate_model.m  load_params.m  run.m  saveModelMat.m  train_loss_func.m  train_model.m
matlab_training/minFunc/minFunc/compiled/: lbfgsAddC.mexa64  lbfgsAddC.mexw64  lbfgsC.mexa64  lbfgsC.mexw64  lbfgsProdC.mexa64  lbfgsProdC.mexw64  mcholC.mexa64  mcholC.mexw64
matlab_utility/: apply_ffcc_model.m  apply_srgb_gamma.m  apply_white_balance.m  data_loader.m  gt_response_from_gt_gain.m  run.m  undo_srgb_gamma.m
preprocess/: apply_white_balance.m  calc_log_hist.m  gt_response_from_gt_gain.m  run.m  run.m~  save_csv_data.m  visualize_hist.m
tensorflow_train/: white_balance_cnn.py
tensorflow_training/: white_balance_cnn.py
